Done with popups

--- a/popups/confirm_tamper/popup.css
+++ b/popups/confirm_tamper/popup.css
@@ -3,12 +3,12 @@ body {
 }
 
 footer {
-    background-color: #85c1e9;
+    background-color: #4fd6d6;
 }
 
 .table thead {
     margin: 10px;
-    background-color: #85c1e9;
+    background-color: #4fd6d6;
 }
 
 #copyright {
